RESOLVED FIXED229858
Silence more -Wreturn-type warnings
https://bugs.webkit.org/show_bug.cgi?id=229858
Summary Silence more -Wreturn-type warnings
Michael Catanzaro
Reported 2021-09-03 04:38:00 PDT
[677/2449] Building CXX object Source/...ources/UnifiedSource-f2e18ffc-38.cpp.o In file included from JavaScriptCore/DerivedSources/unified-sources/UnifiedSource-f2e18ffc-38.cpp:2: ../../Source/JavaScriptCore/runtime/TemporalObject.cpp: In function ‘double JSC::roundNumberToIncrement(double, double, JSC::RoundingMode)’: ../../Source/JavaScriptCore/runtime/TemporalObject.cpp:331:1: warning: control reaches end of non-void function [-Wreturn-type] 331 | } | ^ [687/2449] Building CXX object Source/...ources/UnifiedSource-f2e18ffc-37.cpp.o In file included from JavaScriptCore/DerivedSources/unified-sources/UnifiedSource-f2e18ffc-37.cpp:6: ../../Source/JavaScriptCore/runtime/TemporalDuration.cpp: In function ‘JSC::PropertyName JSC::propertyName(JSC::VM&, unsigned int)’: ../../Source/JavaScriptCore/runtime/TemporalDuration.cpp:45:1: warning: control reaches end of non-void function [-Wreturn-type] 45 | } | ^
Attachments
Patch for landing (1.96 KB, patch)
2021-09-03 04:38 PDT, Michael Catanzaro
no flags
Michael Catanzaro
Comment 1 2021-09-03 04:38:38 PDT
Created attachment 437260 [details] Patch for landing
EWS
Comment 2 2021-09-03 05:07:25 PDT
Committed r281986 (241293@main): <https://commits.webkit.org/241293@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 437260 [details].
Radar WebKit Bug Importer
Comment 3 2021-09-03 05:08:23 PDT
Note You need to log in before you can comment on or make changes to this bug.