Silence more -Wreturn-type warnings https://bugs.webkit.org/show_bug.cgi?id=229858

Unreviewed.

Patch by Michael Catanzaro <mcatanzaro@gnome.org> on 2021-09-03

* runtime/TemporalDuration.cpp:
(JSC::propertyName):
* runtime/TemporalObject.cpp:
(JSC::roundNumberToIncrement):

Canonical link: https://commits.webkit.org/241293@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@281986 268f45cc-cd09-0410-ab3c-d52691b4dbfc